Fix Home header on mobile

--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -10521,7 +10521,7 @@ header.masthead .masthead-heading {
 
 header.masthead .masthead-subheading {
   font-weight: normal;
-  font-family: 'FrederickSans Italic';
+  font-family: 'FrederickSans Regular';
 }
 
 .footer {
